force-app/main/default/objects/InsurancePanel__c/InsurancePanel__c.object-meta.xml
<CustomObject>
    <label>Insurance Panel</label>
    <nameField>
        <displayFormat>IP-{00000}</displayFormat>
        <label>Panel ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Insurance Panels</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>