force-app/main/default/objects/InsurancePanel__c/fields/Insurance_Provider__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Provider__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Insurance Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>