force-app/main/default/objects/InsurancePanel__c/fields/Panel_Status__c.field-meta.xml
<CustomField>
    <fullName>Panel_Status__c</fullName>
    <label>Panel Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Network</fullName>
            </value>
            <value>
                <fullName>Out-of-Network</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>