force-app/main/default/objects/InsurancePanel__c/fields/ProviderCredential__c.field-meta.xml
<CustomField>
    <fullName>ProviderCredential__c</fullName>
    <label>Provider Credential</label>
    <referenceTo>ProviderCredential__c</referenceTo>
    <relationshipLabel>Insurance Panels</relationshipLabel>
    <relationshipName>Insurance_Panels</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>